Fix: Remove blue highlight when a button is clicked on mobile devices

--- a/src/reset.css
+++ b/src/reset.css
@@ -128,3 +128,11 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+/* disable blue highlight on mobile */
+input,
+textarea,
+button,
+select,
+a {
+  -webkit-tap-highlight-color: transparent;
+}
